--- a/sites/all/themes/brund/sass/_brund.elements.scss
+++ b/sites/all/themes/brund/sass/_brund.elements.scss
@@ -91,6 +91,10 @@ a {
     p {
       margin-bottom: 8px;
     }
+
+    td {
+      vertical-align: top;
+    }
   }
 
   .secondary-content {
